<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP60_AUTOSEQUENCE" Id="{e3b0d703-3d4e-4a71-878c-2ba1b79c2d92}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP60_AUTOSEQUENCE
VAR

//INT

	OP60_FIXTURE_2					: INT;
	OP60_FIXTURE_1					: INT;	
	
// TIMER
	OP60_AFT_WRK_POS : TON;
	
	check: BOOL;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
IF (NOT OP60_AutoSelected) OR (OP60_ErrorActive OR OP60_HomeRunning ) THEN
	OP60_AutoRunning:= FALSE;
	OP60_STN_ENABLE:=FALSE;
	OP60_AutoSeq:= 10;
END_IF	


CASE OP60_AutoSeq OF
		
		10: IF (OP60_AutoSelected) THEN		// Check Automode Selected
				OP60_AutoSeq:=20;
	        END_IF
		
	    20:IF ( NOT OP60_ErrorActive) THEN		//Check No error
		       OP60_AutoSeq:=30;
      	   END_IF
		   
      	30:IF (NOT OP60_HomeRunning) THEN		//Check No Homerunning
      		   OP60_AutoSeq :=40;
      	   END_IF
		   
        40:IF (OP60_Main.OP60_Modeselection_FB.TempHomeOK)THEN	//Check Machine in Home
      		   OP60_AutoSeq:= 50;
      	   END_IF
		   
      	50:IF ( NOT OP60_OperationCompleted) THEN		// Check Operation Completed Reset
      		   OP60_AutoSeq:=60;
      	   END_IF
		   
      	70:  // SERVO POSITION SAFE CHECK
	       IF (OP60_GVL.OP60_SERVO_ON_SFE_WRK OR OP60_GVL.OP60_SERVO_ON_HOME) AND NOT SR60_Vert_servo_ctrl.ABSmove_Start THEN 
	        SR60_Vert_servo.fTargetPosition:=OP60_GVL.OP60_VERT_SERVO_WRK_POS;   
	        OP60_AutoSeq:=75;
	       END_IF
		   
	   60:IF  (OP60_GVL.Automatic_Run OR (NOT OP60_GVL.Automatic_Run AND OP60_HMI_Cycle_Start )) THEN		//Machine Start in Fully Automatic or Press Cycle Start For Semi Automatic
		    OP60_HomeConditionOK:=TRUE;
	 			IF( OP60_Main.OP60_Modeselection_FB.HomeConditionOK AND OP60_AutoSelected) THEN
					OP60_AutoRunning:=TRUE;
					OP60_StepRunning:= FALSE;		
				ELSIF (OP60_Main.OP60_Modeselection_FB.HomeConditionOK AND OP60_StepSelected) THEN
					OP60_AutoRunning:=FALSE;
					OP60_StepRunning:= TRUE;
				END_IF;
		  END_IF
		  
		  IF ((OP60_AutoRunning OR OP60_StepRunning) AND OP60_StartEnable) THEN
			OP60_AutoSeq:= 70;
		  END_IF	
		   
		75: // WAITING FOR MOVER AND MOVING SERVO TO TARGET POSITION
			IF OP60_GVL.OP60_STN_ENABLE AND SR60_Vert_servo.fTargetPosition=OP60_GVL.OP60_VERT_SERVO_WRK_POS THEN
			 SR60_Vert_servo_ctrl.ABSmove_Start:=TRUE;
			 OP60_AutoSeq:=80;
			END_IF
			
		80:  IF  OP60_SERVO_POS_DONE AND OP60_SERVO_ON_WRK THEN
			  SR60_Vert_servo_ctrl.ABSmove_Start:=FALSE;
			END_IF
			  OP60_AutoSeq:=90;

		
		90:   OP60_AutoSeq:=100;
	
			
		100: // START THE SPINNER OK COMPONENT FIXTURE
			IF OP60_AFT_WRK_POS.Q THEN	
		//	 SR60_Vert_servo_ctrl.ABSmove_Start:=FALSE;		 
			 IF OP60_FIXTURE_1=9999 THEN
			  IF In_Range(OP60_LH_LVDT_VALUE,OP60_SET_LVDT_VALUE,OP60_LVDT_TOLERANCE) THEN
				  OP60_LH_LVDT_OK := 1;
				  OP60_LH_LVDT_NOK := 0;				  				  
			  ELSE
				  OP60_LH_LVDT_NOK := 1;
				  OP60_LH_LVDT_OK := 0;
			  END_IF  
			 END_IF
			 IF OP60_FIXTURE_2=9999 THEN
			  IF In_Range(OP60_RH_LVDT_VALUE,OP60_SET_LVDT_VALUE,OP60_LVDT_TOLERANCE) THEN
				  OP60_RH_LVDT_OK := 1;
				  OP60_RH_LVDT_NOK := 0;			  				  
			  ELSE
				  OP60_RH_LVDT_NOK := 1;
				  OP60_RH_LVDT_OK := 0;
			  END_IF			  
			 END_IF
			IF NOT SR60_Vert_servo_ctrl.ABSmove_Start THEN
				SR60_Vert_servo.fTargetPosition:=OP60_VERT_SERVO_SFE_WRK_POS;
			END_IF	
			 OP60_AutoSeq:=110;
		 	END_IF
			
		110: // SERVO MOVE TO SAFE WORK POSITION	 
			 IF NOT SR60_Vert_servo_ctrl.ABSmove_Start AND SR60_Vert_servo.fTargetPosition=OP60_VERT_SERVO_SFE_WRK_POS THEN
				SR60_Vert_servo_ctrl.ABSmove_Start:=TRUE;
			END_IF
			IF SR60_Vert_servo_ctrl.ABSmove_Start THEN
				OP60_AutoSeq:=120;
			END_IF
				
		120: // SERVO DONE
			IF  OP60_SERVO_POS_DONE AND OP60_SERVO_ON_SFE_WRK THEN
			 SR60_Vert_servo_ctrl.ABSmove_Start:=FALSE;
			 OP60_AutoSeq:=70;
			 OP60_STN_ENABLE:=FALSE;				
			END_IF			
END_CASE 


OP60_AFT_WRK_POS(IN:=(OP60_SERVO_ON_WRK AND (OP60_AutoSeq=100)), PT:=INT_TO_TIME(OP60_DLY_AFT_SFE_WRK) , Q=> , ET=> );
]]></ST>
    </Implementation>
    <LineIds Name="OP60_AUTOSEQUENCE">
      <LineId Id="3" Count="110" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>